[package]
name = "sample002"
version = "0.1.0"
authors = ["Helly Guo <hellyguo@foxmail.com>"]
edition = "2021"
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
log = "0.4.22"

[dev-dependencies]
